--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "notflix",
-  "version": "0.1.0",
+  "name": "design-system",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 8080",
