--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "design-system",
+  "name": "ds",
   "version": "0.2.0",
-  "private": true,
   "scripts": {
     "dev": "next dev -p 8080",
-    "build": "next build",
+    "build": "rollup -c ./rollup.config.js",
     "start": "next start -p 3030",
     "lint": "next lint"
   },
@@ -15,12 +14,27 @@
     "styled-components": "5.3.5"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.4",
     "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/styled-components": "5.1.25",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
     "typescript": "4.7.4"
-  }
+  },
+  "main": "./dist/index.js",
+  "files": [
+    "./dist",
+    "./README.md"
+  ],
+  "bin": {
+    "ds": "./dist/index.js"
+  },
+  "preferGlobal": false
 }
