--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.6.0",
   "scripts": {
     "dev": "next dev -p 8080",
-    "build": "rollup -c ./rollup.config.js",
+    "build": "rollup -c ./rollup.config.js && node ./postbuild.js",
     "start": "next start -p 3030",
     "lint": "next lint"
   },
