--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ds",
-  "version": "0.17.3",
+  "version": "0.17.4",
   "scripts": {
     "dev": "next dev -p 8080",
     "build": "rollup -c ./rollup.config.js && node ./postbuild.js",
     "start": "next start -p 3030",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build-prod": "next build"
   },
   "dependencies": {
     "next": "12.2.5",
