--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "rollup -c ./rollup.config.js && node ./postbuild.js",
     "start": "next start -p 3030",
     "lint": "next lint",
-    "build-prod": "next build"
+    "build-prod": "next build",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.2.5",
@@ -27,7 +28,8 @@
     "rollup-plugin-dts": "4.2.2",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-terser": "7.0.2",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "husky": "^8.0.0"
   },
   "main": "./dist/index.js",
   "files": [
