--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "next start -p 3030",
     "lint": "next lint",
     "build-prod": "next build",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest --watch"
   },
   "dependencies": {
     "next": "12.2.5",
@@ -19,17 +20,22 @@
     "@rollup/plugin-commonjs": "22.0.2",
     "@rollup/plugin-node-resolve": "13.3.0",
     "@rollup/plugin-typescript": "8.3.4",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "14.4.3",
     "@types/node": "18.7.10",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/styled-components": "5.1.26",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "husky": "8.0.0",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.3",
     "rollup-plugin-dts": "4.2.2",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-terser": "7.0.2",
-    "typescript": "4.7.4",
-    "husky": "^8.0.0"
+    "typescript": "4.7.4"
   },
   "main": "./dist/index.js",
   "files": [
