--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "d-system",
-  "version": "0.18.8",
+  "version": "0.18.9",
   "scripts": {
     "dev": "next dev -p 8080",
-    "build": "rollup -c ./rollup.config.js && node ./postbuild.js",
+    "build": "rollup -c ./rollup.config.js --environment INCLUDE_DEPS,BUILD:production && node ./postbuild.js",
     "start": "next start -p 3030",
     "lint": "next lint",
     "build-prod": "next build",
