--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d-system",
-  "version": "0.20.0",
+  "version": "0.20.1",
   "scripts": {
     "dev": "next dev -p 8080",
     "build": "rollup -c ./rollup.config.js --environment INCLUDE_DEPS,BUILD:production && node ./postbuild.js",
@@ -12,33 +12,33 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "next": "13.0.2",
+    "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "5.3.6"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "23.0.2",
-    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-typescript": "9.0.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.8",
+    "@types/react-dom": "18.0.9",
     "@types/styled-components": "5.1.26",
     "eslint": "8.27.0",
-    "eslint-config-next": "13.0.2",
-    "husky": "8.0.1",
-    "jest": "29.3.0",
-    "jest-environment-jsdom": "29.3.0",
+    "eslint-config-next": "13.0.3",
+    "husky": "8.0.2",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "29.3.1",
     "rollup": "2.79.1",
     "rollup-plugin-dts": "4.2.2",
     "rollup-plugin-minification": "0.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-terser": "7.0.2",
-    "typescript": "4.8.4"
+    "typescript": "4.9.3"
   },
   "main": "./dist/index.js",
   "files": [
