--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "d-system",
-  "version": "0.25.6",
+  "version": "0.25.7",
   "scripts": {
     "dev": "next dev -p 8080",
-    "build": "rollup -c ./rollup.config.js --environment INCLUDE_DEPS,BUILD:production && node ./postbuild.js",
+    "build": "rollup -c ./rollup.config.js --environment INCLUDE_DEPS,BUILD:production --bundleConfigAsCjs && node ./postbuild.js",
     "start": "next start -p 3030",
     "lint": "next lint",
     "build-prod": "next build",
@@ -11,33 +11,34 @@
     "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
-  "dependencies": {
-    "next": "13.1.5",
+  "peerDependencies": {
+    "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "5.3.6"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "23.0.3",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "24.0.1",
     "@rollup/plugin-node-resolve": "15.0.1",
-    "@rollup/plugin-typescript": "9.0.2",
+    "@rollup/plugin-terser": "0.4.0",
+    "@rollup/plugin-typescript": "11.0.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
-    "@types/node": "18.11.15",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
     "@types/styled-components": "5.1.26",
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.7",
-    "husky": "8.0.2",
-    "jest": "29.3.1",
-    "jest-environment-jsdom": "29.3.1",
-    "rollup": "2.79.1",
-    "rollup-plugin-dts": "4.2.2",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
+    "husky": "8.0.3",
+    "jest": "29.4.1",
+    "jest-environment-jsdom": "29.4.1",
+    "rollup": "3.12.0",
+    "rollup-plugin-dts": "5.1.1",
     "rollup-plugin-minification": "0.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
-    "rollup-plugin-terser": "7.0.2",
     "typescript": "4.9.4"
   },
   "main": "./dist/index.js",
