--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d-system",
-  "version": "0.27.5",
+  "version": "0.27.6",
   "scripts": {
     "dev": "next dev -p 8080",
     "build": "rollup -c ./rollup.config.js --environment INCLUDE_DEPS,BUILD:production --bundleConfigAsCjs && node ./postbuild.js",
@@ -12,13 +12,13 @@
     "test:watch": "jest --watch"
   },
   "peerDependencies": {
-    "next": "13.2.1",
+    "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "5.3.6"
+    "styled-components": "5.3.7"
   },
   "devDependencies": {
-    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-babel": "6.0.3",
     "@rollup/plugin-commonjs": "24.0.1",
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-terser": "0.4.0",
@@ -26,16 +26,16 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
-    "@types/node": "18.14.1",
+    "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/styled-components": "5.1.26",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.2.1",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.3",
     "husky": "8.0.3",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
-    "rollup": "3.17.2",
+    "rollup": "3.18.0",
     "rollup-plugin-dts": "5.2.0",
     "rollup-plugin-minification": "0.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
