--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "web": "expo start --web"
   },
   "peerDependencies": {
-    "next": "13.3.2",
+    "expo": "48.0.16",
+    "expo-status-bar": "1.4.4",
+    "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "5.3.10",
-    "expo": "46.0.21",
-    "expo-status-bar": "1.4.4",
-    "react-native": "0.71.7"
+    "react-native": "0.71.7",
+    "styled-components": "5.3.10"
   },
   "devDependencies": {
     "@babel/core": "7.21.8",
@@ -34,18 +34,17 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
-    "@types/node": "18.16.3",
+    "@types/node": "20.1.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
-    "@types/react-native": "0.71.6",
     "@types/styled-components": "5.1.26",
     "@types/styled-components-react-native": "5.2.1",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.2",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.1",
     "husky": "8.0.3",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
-    "rollup": "3.21.1",
+    "rollup": "3.21.5",
     "rollup-plugin-dts": "5.3.0",
     "rollup-plugin-minification": "0.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
