--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d-system",
-  "version": "0.30.0",
+  "version": "0.30.3",
   "scripts": {
     "dev": "next dev -p 8080",
     "build": "rollup -c ./rollup.config.js --environment INCLUDE_DEPS,BUILD:production --bundleConfigAsCjs && node ./postbuild.js",
@@ -50,7 +50,7 @@
     "rollup-plugin-peer-deps-external": "2.2.4",
     "typescript": "4.9.4"
   },
-  "main": "./src/native/App.tsx",
+  "main": "./dist/index.js",
   "mainWeb": "./dist/index.js",
   "mainNative": "./dist/native/index.js",
   "files": [
