--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d-system",
-  "version": "0.31.2",
+  "version": "0.31.3",
   "scripts": {
     "dev": "next dev -p 8080",
     "build": "rollup -c ./rollup.config.js --environment INCLUDE_DEPS,BUILD:production --bundleConfigAsCjs && node ./postbuild.js",
@@ -11,7 +11,7 @@
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "start:expo": "expo start",
-    "android": "expo start --android",
+    "android": "expo start --android --clear",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
@@ -21,11 +21,11 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.10",
     "styled-components": "5.3.11"
   },
   "devDependencies": {
-    "@babel/core": "7.22.1",
+    "@babel/core": "7.22.5",
     "@rollup/plugin-babel": "6.0.3",
     "@rollup/plugin-commonjs": "25.0.0",
     "@rollup/plugin-node-resolve": "15.1.0",
@@ -34,17 +34,18 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
-    "@types/node": "20.1.0",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.9",
+    "@types/react-dom": "18.2.4",
+    "@types/react-native": "~0.64.12",
     "@types/styled-components": "5.1.26",
     "@types/styled-components-react-native": "5.2.1",
-    "eslint": "8.40.0",
+    "eslint": "8.42.0",
     "eslint-config-next": "13.4.1",
     "husky": "8.0.3",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
-    "rollup": "3.23.0",
+    "rollup": "3.24.0",
     "rollup-plugin-dts": "5.3.0",
     "rollup-plugin-minification": "0.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
