--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "start:expo": "expo start",
     "android": "expo start --android --clear",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "peerDependencies": {
     "expo": "48.0.19",
@@ -31,6 +33,14 @@
     "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-terser": "0.4.3",
     "@rollup/plugin-typescript": "11.1.1",
+    "@storybook/addon-essentials": "^7.6.10",
+    "@storybook/addon-interactions": "^7.6.10",
+    "@storybook/addon-links": "^7.6.10",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "^7.6.10",
+    "@storybook/nextjs": "^7.6.10",
+    "@storybook/react": "^7.6.10",
+    "@storybook/test": "^7.6.10",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
@@ -42,13 +52,17 @@
     "@types/styled-components-react-native": "5.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "eslint-plugin-storybook": "^0.6.15",
     "husky": "8.0.3",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "3.24.0",
     "rollup-plugin-dts": "5.3.0",
     "rollup-plugin-minification": "0.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
+    "storybook": "^7.6.10",
     "typescript": "4.9.4"
   },
   "main": "./dist/index.js",
