--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-terser": "0.4.3",
     "@rollup/plugin-typescript": "11.1.1",
+    "@storybook/addon-actions": "^7.6.10",
+    "@storybook/addon-console": "^3.0.0",
     "@storybook/addon-essentials": "^7.6.10",
     "@storybook/addon-interactions": "^7.6.10",
     "@storybook/addon-links": "^7.6.10",
