--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,18 +1,35 @@
+# Workflow name
+name: Deploy Design System to GithubPages
+
 on:
+  # Event for the workflow to run on
   push:
     branches:
-      - "main" # change to the branch you wish to deploy from
+      - 'main'
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# List of jobs
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    # Job steps
     steps:
-    - id: build-publish
-      uses: bitovi/github-actions-storybook-to-github-pages@v1.0.2
-      with:
-        path: ./storybook-static
+      # Manual Checkout
+      - uses: actions/checkout@v3
+
+      # Set up Node
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'
+
+      #👇 Add Storybook build and deploy to GitHub Pages as a step in the workflow
+      - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.1
+        with:
+          install_command: npm install
+          build_command: npm run build-storybook
+          path: storybook-static
+          checkout: false
