--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,11 +25,14 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '20.x'
+      
+      # Clean cache
+      - run: npm cache clean --force
 
       #👇 Add Storybook build and deploy to GitHub Pages as a step in the workflow
       - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.2
         with:
-          install_command: yarn install
-          build_command: yarn build-storybook
+          install_command: npm install
+          build_command: npm run build-storybook
           path: storybook-static
           checkout: false
