--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "peerDependencies": {
     "expo": "48.0.19",
     "expo-status-bar": "1.4.4",
-    "next": "13.4.4",
+    "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.10",
@@ -40,7 +40,7 @@
     "@storybook/addon-links": "^7.6.10",
     "@storybook/addon-onboarding": "^1.0.11",
     "@storybook/blocks": "^7.6.10",
-    "@storybook/nextjs": "^7.6.10",
+    "@storybook/nextjs": "7.6.12",
     "@storybook/react": "^7.6.10",
     "@storybook/test": "^7.6.10",
     "@testing-library/jest-dom": "5.16.5",
@@ -74,9 +74,7 @@
     "./dist",
     "./README.md"
   ],
-  "bin": {
-    "d-system": "./dist/index.js"
-  },
+  "bin": "./dist/index.js",
   "preferGlobal": false,
   "license": "GPLv3"
 }
