--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,11 +28,11 @@ jobs:
           node-version: '20.x'
       
       # Clean cache
-      - run: npm cache clean --force
+      - run: yarn cache clean
 
       #👇 Add Storybook build and deploy to GitHub Pages as a step in the workflow
       - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.2
         with:
-          install_command: npm install
-          build_command: npm run build-storybook
+          install_command: yarn install
+          build_command: yarn build-storybook
           path: storybook-static
