--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
-  "peerDependencies": {
+  "dependencies": {
     "expo": "48.0.19",
     "expo-status-bar": "1.4.4",
     "next": "14.1.0",
@@ -58,8 +58,6 @@
     "husky": "8.0.3",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "rollup": "3.24.0",
     "rollup-plugin-dts": "5.3.0",
     "rollup-plugin-minification": "0.2.0",
