--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
     "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-terser": "0.4.3",
     "@rollup/plugin-typescript": "11.1.1",
-    "@storybook/addon-actions": "^7.6.10",
-    "@storybook/addon-console": "^3.0.0",
-    "@storybook/addon-essentials": "^7.6.10",
-    "@storybook/addon-interactions": "^7.6.10",
-    "@storybook/addon-links": "^7.6.10",
-    "@storybook/addon-onboarding": "^1.0.11",
-    "@storybook/blocks": "^7.6.10",
+    "@storybook/addon-actions": "7.6.12",
+    "@storybook/addon-console": "3.0.0",
+    "@storybook/addon-essentials": "7.6.12",
+    "@storybook/addon-interactions": "7.6.12",
+    "@storybook/addon-links": "7.6.12",
+    "@storybook/addon-onboarding": "1.0.11",
+    "@storybook/blocks": "7.6.12",
     "@storybook/nextjs": "7.6.12",
-    "@storybook/react": "^7.6.10",
-    "@storybook/test": "^7.6.10",
+    "@storybook/react": "7.6.12",
+    "@storybook/test": "7.6.12",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
@@ -54,7 +54,7 @@
     "@types/styled-components-react-native": "5.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
-    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-storybook": "0.6.15",
     "husky": "8.0.3",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
@@ -62,7 +62,7 @@
     "rollup-plugin-dts": "5.3.0",
     "rollup-plugin-minification": "0.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
-    "storybook": "^7.6.10",
+    "storybook": "7.6.12",
     "typescript": "4.9.4"
   },
   "main": "./dist/index.js",
