--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d-system",
-  "version": "0.36.0",
+  "version": "0.37.0",
   "scripts": {
     "dev": "next dev -p 8080",
     "build": "rollup -c ./rollup.config.js --environment INCLUDE_DEPS,BUILD:production --bundleConfigAsCjs && node ./postbuild.js",
@@ -17,53 +17,61 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
+  "peerDependencies": {
+    "expo": ">= 48",
+    "expo-status-bar": ">= 1.11.1",
+    "next": ">= 14.1.0",
+    "react": ">= 18.2.0",
+    "react-dom": ">= 18.2.0",
+    "react-native": ">= 0.73.3",
+    "styled-components": ">= 6.1.8"
+  },
   "dependencies": {
-    "expo": "48.0.19",
-    "expo-status-bar": "1.4.4",
+    "expo": "50.0.6",
+    "expo-status-bar": "1.11.1",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.10",
-    "styled-components": "5.3.11"
+    "react-native": "0.73.4",
+    "styled-components": "6.1.8"
   },
   "devDependencies": {
-    "@babel/core": "7.22.5",
-    "@rollup/plugin-babel": "6.0.3",
-    "@rollup/plugin-commonjs": "25.0.0",
-    "@rollup/plugin-node-resolve": "15.1.0",
-    "@rollup/plugin-terser": "0.4.3",
-    "@rollup/plugin-typescript": "11.1.1",
-    "@storybook/addon-actions": "7.6.12",
+    "@babel/core": "7.23.9",
+    "@rollup/plugin-babel": "6.0.4",
+    "@rollup/plugin-commonjs": "25.0.7",
+    "@rollup/plugin-node-resolve": "15.2.3",
+    "@rollup/plugin-terser": "0.4.4",
+    "@rollup/plugin-typescript": "11.1.6",
+    "@storybook/addon-actions": "7.6.13",
     "@storybook/addon-console": "3.0.0",
-    "@storybook/addon-essentials": "7.6.12",
-    "@storybook/addon-interactions": "7.6.12",
-    "@storybook/addon-links": "7.6.12",
-    "@storybook/addon-onboarding": "1.0.11",
-    "@storybook/blocks": "7.6.12",
-    "@storybook/nextjs": "7.6.12",
-    "@storybook/react": "7.6.12",
-    "@storybook/test": "7.6.12",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.4.3",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.9",
-    "@types/react-dom": "18.2.4",
-    "@types/react-native": "~0.64.12",
-    "@types/styled-components": "5.1.26",
-    "@types/styled-components-react-native": "5.2.1",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
+    "@storybook/addon-essentials": "7.6.13",
+    "@storybook/addon-interactions": "7.6.13",
+    "@storybook/addon-links": "7.6.13",
+    "@storybook/blocks": "7.6.13",
+    "@storybook/nextjs": "7.6.13",
+    "@storybook/react": "7.6.13",
+    "@storybook/test": "7.6.13",
+    "@testing-library/jest-dom": "6.4.2",
+    "@testing-library/react": "14.2.1",
+    "@testing-library/user-event": "14.5.2",
+    "@types/node": "20.11.16",
+    "@types/react": "18.2.55",
+    "@types/react-dom": "18.2.18",
+    "@types/react-native": "0.73.0",
+    "@types/styled-components": "5.1.34",
+    "@types/styled-components-react-native": "5.2.5",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.0",
     "eslint-plugin-storybook": "0.6.15",
-    "husky": "8.0.3",
-    "jest": "29.5.0",
-    "jest-environment-jsdom": "29.5.0",
-    "rollup": "3.24.0",
-    "rollup-plugin-dts": "5.3.0",
+    "husky": "9.0.10",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "rollup": "4.9.6",
+    "rollup-plugin-dts": "6.1.0",
     "rollup-plugin-minification": "0.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
-    "storybook": "7.6.12",
-    "typescript": "4.9.4"
+    "storybook": "7.6.13",
+    "typescript": "5.3.3"
   },
   "main": "./dist/index.js",
   "mainWeb": "./dist/index.js",
