--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d-system",
-  "version": "0.37.2",
+  "version": "0.37.3",
   "scripts": {
     "dev": "next dev -p 8080",
     "build": "rollup -c ./rollup.config.js --environment INCLUDE_DEPS,BUILD:production --bundleConfigAsCjs && node ./postbuild.js",
@@ -21,7 +21,7 @@
   "peerDependencies": {
     "expo": ">= 48",
     "expo-status-bar": ">= 1.11.1",
-    "next": ">= 14.1.0",
+    "next": ">= 14.2.3",
     "react": ">= 18.2.0",
     "react-dom": ">= 18.2.0",
     "react-native": ">= 0.73.3",
@@ -31,51 +31,51 @@
     "@emotion/is-prop-valid": "^1.2.1",
     "expo": ">= 48",
     "expo-status-bar": ">= 1.11.1",
-    "next": ">= 14.1.0",
+    "next": ">= 14.2.3",
     "react": ">= 18.2.0",
     "react-dom": ">= 18.2.0",
     "react-native": ">= 0.73.3",
     "styled-components": ">= 6.1.8"
   },
   "devDependencies": {
-    "@babel/core": "7.23.9",
+    "@babel/core": "7.24.5",
     "@rollup/plugin-babel": "6.0.4",
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@rollup/plugin-replace": "^5.0.5",
     "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "11.1.6",
-    "@storybook/addon-actions": "7.6.13",
+    "@storybook/addon-actions": "8.0.9",
     "@storybook/addon-console": "3.0.0",
-    "@storybook/addon-essentials": "7.6.13",
-    "@storybook/addon-interactions": "7.6.13",
-    "@storybook/addon-links": "7.6.13",
-    "@storybook/blocks": "7.6.13",
-    "@storybook/nextjs": "7.6.13",
-    "@storybook/react": "7.6.13",
-    "@storybook/test": "7.6.13",
-    "@testing-library/jest-dom": "6.4.2",
-    "@testing-library/react": "14.2.1",
+    "@storybook/addon-essentials": "8.0.9",
+    "@storybook/addon-interactions": "8.0.9",
+    "@storybook/addon-links": "8.0.9",
+    "@storybook/blocks": "8.0.9",
+    "@storybook/nextjs": "8.0.9",
+    "@storybook/react": "8.0.9",
+    "@storybook/test": "8.0.9",
+    "@testing-library/jest-dom": "6.4.3",
+    "@testing-library/react": "15.0.6",
     "@testing-library/user-event": "14.5.2",
-    "@types/node": "20.11.16",
-    "@types/react": "18.2.55",
-    "@types/react-dom": "18.2.18",
+    "@types/node": "20.12.8",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@types/react-native": "0.73.0",
     "@types/styled-components": "5.1.34",
     "@types/styled-components-react-native": "5.2.5",
-    "cypress": "^13.8.1",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
-    "eslint-plugin-storybook": "0.6.15",
+    "cypress": "13.8.1",
+    "eslint": "9.1.1",
+    "eslint-config-next": "14.2.3",
+    "eslint-plugin-storybook": "0.8.0",
     "husky": "9.0.10",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "rollup": "4.9.6",
+    "rollup": "4.17.2",
     "rollup-plugin-dts": "6.1.0",
     "rollup-plugin-minification": "0.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
-    "storybook": "7.6.13",
-    "typescript": "5.3.3"
+    "storybook": "8.0.9",
+    "typescript": "5.4.5"
   },
   "main": "./dist/index.js",
   "mainWeb": "./dist/index.js",
