--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d-system",
-  "version": "0.38.0",
+  "version": "0.38.1",
   "scripts": {
     "dev": "next dev -p 8080",
     "build": "rollup -c ./rollup.config.js --environment INCLUDE_DEPS,BUILD:production --bundleConfigAsCjs && node ./postbuild.js",
@@ -35,7 +35,7 @@
     "react": ">= 18.2.0",
     "react-dom": ">= 18.2.0",
     "react-native": ">= 0.73.3",
-    "styled-components": ">= 6.1.8"
+    "styled-components": "6.1.8"
   },
   "devDependencies": {
     "@babel/core": "7.24.5",
